--- a/src/componets/searchbox.css
+++ b/src/componets/searchbox.css
@@ -66,3 +66,200 @@
     padding-left: 2vw;
     z-index: 10;
 }
+.TI {
+    position: absolute;
+    z-index: 8;
+    top: 0;
+    left: 0;
+    height: 800px;
+    width: 100%;
+    background-color: #D2E6A5;
+    border-top-right-radius: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+} 
+.GGA {
+    animation: ann 0.5s ease-in-out forwards;
+}
+.GGB {
+    animation: aBN 0.5s ease-in-out forwards;
+}
+.GGC {
+    animation: aCN 0.5s ease-in-out forwards;
+}
+@keyframes ann {
+    0% {
+        opacity: 0;
+        transform: translateY(500px) translateX(500px) rotate(-30deg);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) translateX(0) rotate(0);
+    }
+    
+}
+@keyframes aBN {
+    0% {
+        opacity: 0;
+        transform: translateY(500px) translateX(500px) rotate(-30deg);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) translateX(0) rotate(0);
+    }
+    
+}
+@keyframes aCN {
+    0% {
+        opacity: 0;
+        transform: translateY(500px) translateX(500px) rotate(-30deg);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) translateX(0) rotate(0);
+    }
+    
+}
+.info_image {
+    width: 100%;
+    object-fit: cover;
+    height: 500px;
+    border-radius: 20px;
+}
+.Info-Container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 500px;
+    padding: 25px;
+    margin-right: 30%;
+    margin-bottom: 50px;
+    font-weight: 800;
+}
+.A-header {
+    color: #064619;
+    font-size: 80px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.A-paragraph {
+    color: #064619;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 20px;
+}
+.bottomInfoContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 60%;
+}
+.openButton {
+    background-color: #064619;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 180px;
+    cursor: pointer;
+    height: 50px;
+    font-weight: 800;
+    font-size: x-large;
+    border-radius: 40px;
+    border: 4px solid #064619;
+    transition: all 0.2s ease-in-out;
+}
+
+.openButton:hover {
+    background-color: transparent;
+    color: #064619;
+}
+.closeButton {
+    background-color: transparent;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #064619;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.closeButton:hover {
+    color: #0ca339;
+    border: 1px solid #0ca339;
+}
+.topInfoB {
+    background-color: #407E15;
+}
+.B-paragraph{
+    color: white;
+}
+.openButtonB {
+    background-color: #064619;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 180px;
+    cursor: pointer;
+    height: 50px;
+    font-weight: 800;
+    font-size: x-large;
+    border-radius: 40px;
+    border: 4px solid #064619;
+    transition: all 0.2s ease-in-out;
+}
+
+.openButtonB:hover {
+    background-color: transparent;
+    color: white;
+}
+.topInfoC {
+    background-color: #064619;
+}
+.openButtonC {
+    background-color: #407E15;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 180px;
+    cursor: pointer;
+    height: 50px;
+    font-weight: 800;
+    font-size: x-large;
+    border-radius: 40px;
+    border: 4px solid #407E15;
+    transition: all 0.2s ease-in-out;
+}
+.openButtonC:hover {
+    background-color: transparent;
+    color: white;
+}
+.closeButtonC {
+    background-color: transparent;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+    color: white;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.closeButtonC:hover{
+    color: wheat;
+    border: 1px solid wheat;
+}
+.hide {
+    opacity: 0;
+}
