--- a/src/componets/slideShow.css
+++ b/src/componets/slideShow.css
@@ -22,6 +22,11 @@
     border-radius: 10px;
     border: 4px solid #000;
     filter: brightness(1.2);
+    cursor: pointer;
+}
+.cardImage:hover {
+    filter: brightness(0.6);
+    transition: all 0.3s ease;
 }
 .slide {
     display: flex;
